vlib/v/checker/tests/enum_field_value_duplicate_d.vv
const one = 1

enum MyEnum {
	a = one
	b
	c = one
}

fn main() {
	$for val in MyEnum.values {
		println('> name: ${val.name} | value: ${val.value}')
	}
}
